# challenger

./: .env.template  .gitignore  Procfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
challenger/: settings.py  urls.py
challenger/api_docs/: api_v1.py
core/: admin.py  backends.py  models.py  serializers.py  urls.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_document_markdown_voicemessage_delete_widget.py  0003_document_name_voicemessage_dialogid.py
core/third_party_api/: alphavantage_api.py  documents_api.py  otkrytie_api.py
core/utils/: formatters.py  path_constructors.py  verification_utils.py
docs/: project_documentations.md
